2008-11-14  Frederic Peters  <fpeters@0d.be>

	* patches/nss.pkgconfig-and-configure.patch: updated nss Makefile patch
	to create a clean target and to remove installation of the .a file.

2008-11-13  William Jon McCann  <jmccann@redhat.com>

	* modulesets/gnome-suites-2.24.modules: use gnome-2-24 branch of
	gnome-screensaver

2008-11-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/changes.py: makes sure there is a line to read when
	reading notification emails.

2008-11-13  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.26.modules: added git repository "fishsoup.net"
	and "metacity-clutter", "gnome-shell" and "almanah" modules.

2008-11-13  John Carr  <john.carr@unrouted.co.uk>

	* jhbuild/versioncontrol/__init__.py:
	* jhbuild/versioncontrol/bzr.py:
	* jhbuild/versioncontrol/git.py:
	* jhbuild/versioncontrol/svn.py:
	Add an exists() function to check if a module/branch
	definition is correct.

	* jhbuild/commands/checkmodulesets.py:
	Add jhbuild checkmodulesets command to find modules that
	can't be checked out.

2008-11-13  John Carr  <john.carr@unrouted.co.uk>

	* jhbuild/versioncontrol/svn.py:
	Implement support for tagged version in svn repositories

	* modulesets/gnome-2.16.modules:
	* modulesets/gnome-2.18.modules:
	* modulesets/hildon.modules:
	Take advantage of tag support

2008-11-13  John Carr  <john.carr@unrouted.co.uk>

	* jhbuild/versioncontrol/svn.py:
	Replace trunk-path and friends with *-template to support more
	common repository layouts.

2008-11-11  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.26.modules: added "empathy-webkit" from 
	Xavier Claessens' git repository - we hope it will land on
	svn.gnome.org soon: it works ;)

2008-11-11  Frederic Peters  <fpeters@0d.be>

	* jhbuild/utils/httpcache.py: respect XDG_CACHE_HOME for cached
	modulesets.  (closes: #560092, patch by James Sharpe)

2008-11-11  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-2.22.modules:
	* modulesets/gnome-2.24.modules: