@@ -1,5 +1,10 @@
 2008-11-14  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/buildbot/status/web/__init__.py: also display slave results
+	summary at the top of the table.
+
+2008-11-14  Frederic Peters  <fpeters@0d.be>
+
 	* patches/nss.pkgconfig-and-configure.patch: updated nss Makefile patch
 	to create a clean target and to remove installation of the .a file.
 
